Updated build.gradle to fix JavaFX dependency for CI